# FastqCompressorDecompressor

./: CMakeLists.txt  README.md  main.cpp
coders/: coder.h
coders/ans_coder/: ans_coder.h
coders/haffman_coder/: huffman.cpp  huffman.h  huffman_coder.h
coders/range_coder/: range_coder.h
experiments/: huffman_methods.txt  range_methods.txt  test_mgi
util/: utils.h
